; ModuleID = '/home/carl/AnghaBench/linux/arch/nios2/kernel/extr_irq.c_chip_unmask.c'
source_filename = "/home/carl/AnghaBench/linux/arch/nios2/kernel/extr_irq.c_chip_unmask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_data = type { i32 }

@ienable = common dso_local global i32 0, align 4
@CTL_IENABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.irq_data*)* @chip_unmask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @chip_unmask(%struct.irq_data* %0) #0 {
  %2 = alloca %struct.irq_data*, align 8
  store %struct.irq_data* %0, %struct.irq_data** %2, align 8
  %3 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %4 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = shl i32 1, %5
  %7 = load i32, i32* @ienable, align 4
  %8 = or i32 %7, %6
  store i32 %8, i32* @ienable, align 4
  %9 = load i32, i32* @CTL_IENABLE, align 4
  %10 = load i32, i32* @ienable, align 4
  %11 = call i32 @WRCTL(i32 %9, i32 %10)
  ret void
}

declare dso_local i32 @WRCTL(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
